CHANGES

2016-06-15
 * gene_distances.py: fixed and added more documentation

2016-06-08
 * id_marker_alleles.py 
   * renamed from allele_prevalence.py
   * added option --min_reads for determining allele +/-
   * script now identified bi-allelic marker alleles after computing prevalence
 * added sharing_marker_alleles.py
   * identified and computes sharing of marker alleles between all pairs of samples

2016-06-07
 * added scripts/analysis/allele_prevalence.py; computes the fraction of samples where each nucleotide is observed
 * added midas/parse.py; tools for parsing midas output files

2016-06-02
 * merge_midas.py: fixed check_input() when specifying 'dir' as intype

2016-06-01
 * updated documentation
 * updated help-text for run_midas.py and merge_midas.py
   * added sections for output files, formats
 * merge_midas.py
   * fixed bug when specifying input with trailing '/'
   * changed output file names for genes and snps

2016-05-25
 * updated documentation

2016-05-24
 * annotate_sites: increased speed to 45k sites/sec from 1k sites/sec 
   * lookup gene seqs 1x
   * keep track of gene_index between sites
 * merge_midas.py snps
   * added site annotation
 * download_ref_db.py
   * points to new reference database

2016-05-23
 * restructured directories
   * renamed /src to /midas
   * created /midas/run, /midas/merge
   * moved /data under /ref_db
   * moved /analysis under /scripts
 * merge_midas.py
   * made compatible with old outputs
 * merge_midas.py snps
   * combined ref_id and ref_pos into single field in output files
   * first merge all sites, then filter sites
   * no longer annotating snps
   * added --maf filter
 * run_midas.py
   * added shell commands to log.txt
   * renamed fields in summary.txt
 * setup.py
   * added pandas dependency
 * analysis
   * added gene_distances.py

2016-05-19
 * run_midas.py: 
  * automatically generate log file
  * restructure files: /output, /temp, summary.txt, log.txt 
 * merge_midas.py: